--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react": "19.2.1",
     "react-dom": "19.2.1",
     "react-hook-form": "^7.68.0",
+    "react-icons": "^5.5.0",
     "tailwind-merge": "^3.4.0",
     "thirdweb": "^5.116.1",
     "three": "^0.167.1",
