chore: Update .gitignore to include frontend1 and frontend2, marking medichain-hackathon as dirty

--- a/.gitignore
+++ b/.gitignore
@@ -14,7 +14,8 @@ docs/
 !/broadcast
 /broadcast/*/31337/
 /broadcast/**/dry-run/
-
+/frontend1/
+/frontend2/
 # Ignore OS/Editor files
 .DS_Store
 Thumbs.db
