chore: Mark medichain-hackathon and health-record-dapps subprojects as dirty in .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -31,3 +31,4 @@ coverage/
 # Ignore local .git in subfolders
 back-end/smart-contract/.git/
 frontend1/medichain-hackathon
+frontend1/medichain-hackathon
