feat(footer): Enhance footer with comprehensive links and marquee animation
- Add marquee animation keyframes and styles to globals.css for scrolling content
- Restructure footer component with multi-column layout (Product, Resources, Legal)
- Add brand section with MediChain logo, description, and Lisk network badge
- Implement organized footer link sections with hover state transitions
- Add social media links with proper labels and external link indicators
- Update OCR section text from "Powered by Gemini AI" to "Powered by AI"
- Add gradient styling and theme-aware color classes for hospital and patient tabs
- Improve footer accessibility with semantic HTML and proper link structure
- Enhance visual hierarchy with divider line and improved spacing
- Add dynamic copyright year and heart icon for branding

--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@radix-ui/react-switch": "^1.2.6",
     "@tanstack/react-form": "^1.27.7",
     "@tanstack/zod-form-adapter": "^0.42.1",
+    "@web3icons/react": "^4.1.12",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "framer-motion": "^12.23.26",
