--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "tailwind-merge": "^3.4.0",
     "thirdweb": "^5.116.1",
     "three": "^0.167.1",
+    "viem": "^2.43.5",
     "zod": "^3.24.1"
   },
   "devDependencies": {
